# xeno-ml-template

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: ci.yml
src/xeno_ml/segmentation/: cellpose_runner.py  dummy.py  mlflow_utils.py  report.py
templates/: report.html
tests/: test_dummy.py  test_segment.py
tools/: build_voxcraft.py
xeno-ml-template/tools/: build_voxcraft.py
